--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	
 	<!-- Load CSS Compilled without JS -->
 	<noscript>
-		<link rel="stylesheet" href="_header.min.css">
-		<link rel="stylesheet" href="_main.min.css">
+		<link rel="stylesheet" href="../_header.min.css">
+		<link rel="stylesheet" href="../_main.min.css">
 	</noscript>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
