--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 	
 	<!-- Load CSS Compilled without JS -->
 	<noscript>
-		<link rel="stylesheet" href="../_header.min.css">
-		<link rel="stylesheet" href="../_main.min.css">
+		<link rel="stylesheet" href="_header.min.css">
+		<link rel="stylesheet" href="_main.min.css">
 	</noscript>
+	<link rel="stylesheet" href="_header.min.css">
+	<link rel="stylesheet" href="_main.min.css">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -641,21 +643,6 @@
 	<![endif]-->
 
 	<!-- Load CSS -->
-	<script>
-
-	//Load Libs CSS
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-	//Header Styles (compress & paste to header after release)
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="_header.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-	
-	//User Styles + Media Queries
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="_main.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-</script>
 
 <!-- Load Scripts -->
 <script>var scr = {"scripts":[
