--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<link rel="stylesheet" href="_header.min.css">
 		<link rel="stylesheet" href="_main.min.css">
 	</noscript>
-	<link rel="stylesheet" href="_header.min.css">
-	<link rel="stylesheet" href="_main.min.css">
+	<link rel="stylesheet" href="../_header.min.css">
+	<link rel="stylesheet" href="../_main.min.css">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
