--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	
 	<!-- Load CSS Compilled without JS -->
 	<noscript>
-		<link rel="stylesheet" href="_header.css">
-		<link rel="stylesheet" href="_main.css">
+		<link rel="stylesheet" href="css/_header.css">
+		<link rel="stylesheet" href="css/_main.css">
 	</noscript>
-	<link rel="stylesheet" href="_header.css">
-	<link rel="stylesheet" href="_main.css">
+	<link rel="stylesheet" href="css/_header.css">
+	<link rel="stylesheet" href="css/_main.css">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
