--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" href="libs/owl-carousel/owl.theme.css">
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
 
-	<link rel="stylesheet" href="libs/owl-carousel/_main.css">
+	<link rel="stylesheet" href="libs/owl-carousel/main.css">
 
 </head>
 
