--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
 	<!-- Load CSS Compilled without JS -->
 	<noscript>
-		<link rel="stylesheet" href="_header.min.css">
-		<link rel="stylesheet" href="_main.min.css">
+		<link rel="stylesheet" href="main.min.css">
 	</noscript>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -646,10 +645,6 @@
 	//Load Libs CSS
 	var ms=document.createElement("link");ms.rel="stylesheet";
 	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-	//Header Styles (compress & paste to header after release)
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="_header.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
 
 	//User Styles + Media Queries
 	var ms=document.createElement("link");ms.rel="stylesheet";
