--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	<!-- Fonts Loader from _fonts.css (HTML5 LocalStorage) -->
 	<script>!function(){function e(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)}function t(e){return window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===e}function n(){if(window.localStorage&&window.XMLHttpRequest)if(t(o))a(localStorage.font_css_cache);else{var n=new XMLHttpRequest;n.open("GET",o,!0),e(n,"load",function(){4===n.readyState&&(a(n.responseText),localStorage.font_css_cache=n.responseText,localStorage.font_css_cache_file=o)}),n.send()}else{var c=document.createElement("link");c.href=o,c.rel="stylesheet",c.type="text/css",document.getElementsByTagName("head")[0].appendChild(c),document.cookie="font_css_cache"}}function a(e){var t=document.createElement("style");t.innerHTML=e,document.getElementsByTagName("head")[0].appendChild(t)}var o="_fonts.min.css";window.localStorage&&localStorage.font_css_cache||document.cookie.indexOf("font_css_cache")>-1?n():e(window,"load",n)}();</script>
 
+	<!-- Load CSS Compilled without JS -->
+	<noscript>
+		<link rel="stylesheet" href="main.min.css">
+	</noscript>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -641,11 +645,7 @@
 	//Load Libs CSS
 	var ms=document.createElement("link");ms.rel="stylesheet";
 	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-	//Header Styles (compress & paste to header after release)
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="_header.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
+	
 	//User Styles + Media Queries
 	var ms=document.createElement("link");ms.rel="stylesheet";
 	ms.href="main.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
