--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<!-- Fonts Loader from _fonts.css (HTML5 LocalStorage) -->
 	<script>!function(){function e(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)}function t(e){return window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===e}function n(){if(window.localStorage&&window.XMLHttpRequest)if(t(o))a(localStorage.font_css_cache);else{var n=new XMLHttpRequest;n.open("GET",o,!0),e(n,"load",function(){4===n.readyState&&(a(n.responseText),localStorage.font_css_cache=n.responseText,localStorage.font_css_cache_file=o)}),n.send()}else{var c=document.createElement("link");c.href=o,c.rel="stylesheet",c.type="text/css",document.getElementsByTagName("head")[0].appendChild(c),document.cookie="font_css_cache"}}function a(e){var t=document.createElement("style");t.innerHTML=e,document.getElementsByTagName("head")[0].appendChild(t)}var o="_fonts.min.css";window.localStorage&&localStorage.font_css_cache||document.cookie.indexOf("font_css_cache")>-1?n():e(window,"load",n)}();</script>
 
+	<link rel="stylesheet" href="main.min.css">
+
 	<!-- Load CSS Compilled without JS -->
 	<noscript>
 		<link rel="stylesheet" href="main.min.css">
@@ -640,17 +642,6 @@
 	<![endif]-->
 
 	<!-- Load CSS -->
-	<script>
-
-	//Load Libs CSS
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="libs/animate/animate.css";document.getElementsByTagName("head")[0].appendChild(ms);
-	
-	//User Styles + Media Queries
-	var ms=document.createElement("link");ms.rel="stylesheet";
-	ms.href="main.min.css";document.getElementsByTagName("head")[0].appendChild(ms);
-
-</script>
 
 <!-- Load Scripts -->
 <script>var scr = {"scripts":[
